[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/House/V1.1-RandomGenHouse.gd" type="Script" id=1]
[ext_resource path="res://WallTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/KinematicBodies/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/House/HouseShapes/R-Down.tscn" type="PackedScene" id=4]
[ext_resource path="res://HouseBackground.png" type="Texture" id=5]
[ext_resource path="res://Scenes/House/HouseShapes/Cross.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/House/HouseShapes/L-Down.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/House/HouseShapes/L-Up.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/House/HouseShapes/R-Up.tscn" type="PackedScene" id=9]

[node name="RandomGenHouse" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 512 )
scale = Vector2( 32, 33.0323 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 1, 32, 31 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 160, 160 )

[node name="HouseShapes" type="Node2D" parent="."]
visible = false
position = Vector2( -1120, 0 )

[node name="Cross" parent="HouseShapes" instance=ExtResource( 6 )]

[node name="L_Down" parent="HouseShapes" instance=ExtResource( 7 )]

[node name="L_Up" parent="HouseShapes" instance=ExtResource( 8 )]

[node name="R_Down" parent="HouseShapes" instance=ExtResource( 4 )]

[node name="R_Up" parent="HouseShapes" instance=ExtResource( 9 )]
